[package]
name = "fastly-compute-project"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
fastly = "^0.9.2"
bytes = {version = "^1.4.0", features = ["serde"]}
# fastly-cache-preview = { version = "^0.9.2", git = "ssh://git@github.com/fastly/ExecuteD.git", rev = "5a473a56813af70006b80729356b2df929149709" }
fastly-cache-preview = { version = "^0.9.2", git = "ssh://git@github.com/fastly/ExecuteD.git", rev = "jenkins/release/20230407-15706.0gb9df8a653282" }

sha2 = "^0.10"
serde_json ="1.0"